--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
-    /*background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShFtPJrX_hqS4AsYF1SQuHatKwMDgXuAkqDA&s); */
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShFtPJrX_hqS4AsYF1SQuHatKwMDgXuAkqDA&s);
     background-color: hsl(13, 31%, 94%);
 }
 
